UIUX-1816-marital-status-spacing-issue

--- a/src/components/Pages/CheckMyOffers/CheckMyOffer.css
+++ b/src/components/Pages/CheckMyOffers/CheckMyOffer.css
@@ -614,9 +614,19 @@
 	margin: 25px 0px 0px 0px !important;
 }
 
+#selectMaritalStatusWrap{
+	text-align: left;
+	padding-bottom: 15px !important;
+}
 #selectMaritalStatusWrap .subOption {
 	color: #171717 !important;
+}
+#selectMaritalStatus{
+	margin-top: 15px;
 
+}
+#selectMaritalStatus div label{
+	margin-left: -14px;
 }
 
 #activeDutySelect .subOption {
